syntax = "proto3";
package messenger;
option go_package = "./messenger";

import "google/protobuf/empty.proto";

service Messenger {
    rpc SignUp(SignUpRequest) returns (google.protobuf.Empty) {}
    rpc LogIn(LogInRequest) returns (User) {}
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc SendMessage(Message) returns (MessageResponse) {}
    rpc ReceiveMessage(stream User) returns (stream Message) {}
}

message SignUpRequest {
    string login = 1;
    string name = 2;
    string password = 3;
}

message LogInRequest {
    string login = 1;
    string password = 2;
}

message User {
    string name = 1;
}

message Message {
    string sender = 1;
    string receiver = 2;
    string message = 3;
}

message MessageResponse {
    bool sent = 1;
}

